feat (back) : change cors configuration
feat (front) :
add error handler service in product service
create exception screen for 500 error