@@ -15,19 +15,40 @@ import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 @Configuration
 public class AppConfig {
 	
-	@Bean
-	CorsFilter corsFilter() {
-		CorsConfiguration config = new CorsConfiguration();
-		config.addAllowedOrigin("*");
+//	@Bean
+//	CorsFilter corsFilter() {
+//		CorsConfiguration config = new CorsConfiguration();
+//		config.addAllowedOrigin("*");
 //		config.addAllowedHeader("*");
 //		config.addAllowedMethod("*");
-		config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS","PATCH"));
-        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-        config.setExposedHeaders(List.of("Authorization"));
+//		config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS","PATCH"));
+//        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+//        config.setExposedHeaders(List.of("Authorization"));
 //		config.setAllowCredentials(true);
-		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-		source.registerCorsConfiguration("/**",config);
-		return new CorsFilter(source);
-	}
+//		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//		source.registerCorsConfiguration("/**",config);
+//		return new CorsFilter(source);
+//	}
+	
+    @Bean
+    CorsConfigurationSource corsConfigurationSource() {
+        /*return (configuration) -> {
+            CorsConfiguration corsConfiguration = new CorsConfiguration();
+
+            corsConfiguration.setAllowedOrigins(List.of("*"));
+            corsConfiguration.setAllowedHeaders(List.of("*"));
+            corsConfiguration.setAllowedMethods(List.of("*"));
+
+            return corsConfiguration;
+        };*/
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS","PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        configuration.setExposedHeaders(List.of("Authorization"));
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
+    }
 	
 }
